--- a/.github/ISSUE_TEMPLATE/server-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/server-bug-report.yml
@@ -14,7 +14,7 @@ body:
       required: true
   - type: textarea
     id: how-happened
-    atributes:
+    attributes:
       label: Шаги воспроизведения
       description: Опишите, как воспроизвести эту ошибку.
       placeholder: |
@@ -22,7 +22,7 @@ body:
         2. Нажмите на '....'
         3. Дойдите до '....'
         4. Увидите ошибку.
-  - markdown:
+  - type: markdown:
     attributes:
       value: |
         ### Поведение системы
@@ -53,13 +53,13 @@ body:
     attributes:
       label: Версия игры
       description: На какой версии игры это произошло?
-    options:
-      - 1.12.x
-      - 1.13.x
-      - 1.14.x
-      - 1.15.x
-      - 1.16.x
-      - 1.17.x
-      - 1.18.x
+      options:
+        - 1.12.x
+        - 1.13.x
+        - 1.14.x
+        - 1.15.x
+        - 1.16.x
+        - 1.17.x
+        - 1.18.x
     validations:
       required: true
