Make `how-happend` field required

--- a/.github/ISSUE_TEMPLATE/server-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/server-bug-report.yml
@@ -22,6 +22,8 @@ body:
         2. Нажмите на '....'
         3. Дойдите до '....'
         4. Увидите ошибку.
+    validations:
+      required: true
   - type: markdown
     attributes:
       value: |
